force-app/main/default/objects/Session__c/fields/LastPromptIndex__c.field-meta.xml
<CustomField>
    <fullName>LastPromptIndex__c</fullName>
    <label>LastPromptIndex</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>